--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
+  
   <body>
     <h1>Hello and welcome to <strong>MY</strong> site :)</h1>
     <p>Hello world! This is my first paragraph on my site.<p>
+    
     <script src="script.js"></script>
   </body>
 </html>
