--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Hello and welcome to <strong>MY</strong> site :)</h1>
     <p>Hello world! This is my first paragraph on my site.<p>
-    
+    <p>This paragraph was edited in from github!<p>
     <script src="script.js"></script>
   </body>
 </html>
